tests/error/02_lexer_unterminated_string.mire
load kioto

pub fn main: () {
    set x = "unclosed string
}